# context-window-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  RELEASE_NOTES.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  CONTRIBUTING.md  DEPENDENCIES.md  EDGE_CASES.md  ERROR_HANDLING.md  MOBILE_FRIENDLY.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  index.md  test_todo.md
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: getting-started.md  index.md  storage.md  tools.md
src/context_window_manager/: __init__.py  __main__.py  config.py  errors.py  monitoring.py  performance.py  security.py  server.py
src/context_window_manager/core/: __init__.py  kv_store.py  session_registry.py  storage_keys.py  vllm_client.py  window_manager.py
src/context_window_manager/tools/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_errors.py  test_monitoring.py  test_performance.py  test_security.py  test_server.py
tests/unit/core/: test_atomic_metadata_commit.py  test_kv_store.py  test_kv_store_atomic.py  test_session_registry.py  test_session_registry_sql_safety.py  test_storage_keys.py  test_vllm_client.py  test_window_manager.py  test_window_manager_id_validation.py
